# Detector_YoloV3

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
Detector/Detector/: Configuration.cfg  Configuration.cpp  Configuration.h  DBOperator.cpp  DBOperator.h  Detector.cpp  Detector.h  Detector.sln  Detector.vcxproj  Detector.vcxproj.filters  DetectorNet.cpp  DetectorNet.h  FrameDO.cpp  FrameDO.h  NetResultDO.cpp  NetResultDO.h  ProcessFrame.cpp  ProcessFrame.h  ThreadDBOperator.cpp  ThreadDBOperator.h  db_Operator.cpp  db_Operator.h  pch.cpp  pch.h
config/: Configuration.cfg
docs/: ARCHITECTURE.md
include/detector/capture/: FrameSource.h
include/detector/core/: Config.h  Log.h  ThreadSafeQueue.h  Time.h
include/detector/inference/: Detection.h  DetectorNet.h  Frame.h
include/detector/persistence/: AdoConnection.h  FileSink.h  ISink.h  SqlServerSink.h
include/detector/pipeline/: Pipeline.h
src/capture/: FrameSource.cpp
src/core/: Config.cpp  Log.cpp  Time.cpp
src/inference/: DetectorNet.cpp
src/persistence/: AdoConnection.cpp  FileSink.cpp  SqlServerSink.cpp
src/pipeline/: Pipeline.cpp  main.cpp
